# llmExperimentCharacters

./: .gitignore  README.md  autoInference.py  bartenderDialogue.csv  data.csv  data.py  data2.csv  pyproject.toml  quen.py  quenTrain.py
